<resources>
    <string name="app_name">Comment App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_android_account">Already have an account?</string>
    <string name="Password">password</string>
    <string name="enter_your_email">Email</string>
    <string name="secret_code">secret code</string>
    <string name="TermsNconditons">By clicking \"Sign Up\" button, your are creating an \n account, and you agree to the Terms of Use.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="comments">What would you like to share with the world?</string>
    <string name="username">username</string>
    <string name="this_is_some_random_comment">this is some random comment</string>
    <string name="user_exist">User already exist, Please sign in</string>
    <string name="userExist">User Already Exist, Please Sign In</string>
    <string name="empty">This cannot be Empty!!</string>
    <string name="user">Username: </string>

</resources>