<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ResetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:elevation="20dp"
        android:hint="@string/enter_your_email"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="1dp"
        app:endIconTint="@color/teal_200"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:lineSpacingExtra="8sp"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:textAlignment="textStart"
            android:textColorHint="#757575"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_secretcode"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="20dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_500"
        tools:targetApi="p">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_secret_Code"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"

            android:hint="@string/secret_code"
            android:inputType="textPassword"
            android:lineSpacingExtra="8sp"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:textAlignment="textStart"
            android:textColorHint="#757575"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_showPassword"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:layout_marginTop="72dp"
        android:text="Show Password"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="@+id/til_secretcode"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/til_secretcode"
        app:layout_constraintTop_toBottomOf="@+id/til_secretcode"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_showPassword"
        app:layout_constraintEnd_toEndOf="@+id/til_secretcode"
        app:layout_constraintStart_toStartOf="@+id/til_secretcode"
        app:layout_constraintTop_toBottomOf="@+id/til_secretcode"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>